--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
     "three": "^0.182.0",
